[tool.poetry]
name = "SublimeTkext"
version = "0.3.0"
description = ""
authors = ["torshepherd <tor.aksel.shepherd@gmail.com>"]
packages = [{ include = "sublime_tkext" }]

[tool.poetry.scripts]
subtk = 'sublime_tkext:main'

[tool.poetry.dependencies]
python = "^3.8"
sv-ttk = "^2.0"
click = "^8.1.3"
python-lsp-server = { extras = ["all"], version = "^1.5.0" }
Pygments = "^2.13.0"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
